@@ -2,6 +2,7 @@
     - Dropped jayatana version 1.2.4 as version 2.x superseeds it
     - Feature: Trim journal names before looking up the abbreviation
     - Minor fixes regarding the status output of marking/unmarking entries
+    - Internal default key bindings are honored again
 2.11 beta 2
     - Feature: Option to clean URLs generated by Google (patch #204)
     - Fix for bug #1272: JabRef now launches on Mac OS X
